--- a/config.h.in
+++ b/config.h.in
@@ -34,11 +34,8 @@
 /* Define to 1 if you have the `jpeg' library (-ljpeg). */
 #undef HAVE_LIBJPEG
 
-/* Define to 1 if you have the `lua50' library (-llua50). */
-#undef HAVE_LIBLUA50
-
-/* Define to 1 if you have the `luabind' library (-lluabind). */
-#undef HAVE_LIBLUABIND
+/* Define to 1 if you have the `lua5.1' library (-llua5.1). */
+#undef HAVE_LIBLUA5_1
 
 /* Define to 1 if you have the `physfs' library (-lphysfs). */
 #undef HAVE_LIBPHYSFS
