--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(asc,2.3.73.0)
+AC_INIT(asc,2.3.73.2)
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
@@ -190,26 +190,29 @@ AC_CHECK_LIB( SDL_image,
 
 LUAAVAIL=1
 
-AC_CHECK_LIB(lua50,lua_open,,LUAAVAIL=0)
-AC_CHECK_LIB(luabind,luabind::open,,LUAAVAIL=0)
+AC_CHECK_LIB(lua5.1,luaL_openlibs,,LUAAVAIL=0)
 
 
-if test "x$LUAAVAIL" = x111; then
+if test "x$LUAAVAIL" = x1; then
 
-   LUA_FLAGS="-I/usr/include/lua50/"
+   AC_MSG_NOTICE([Activating LUA support])
+
+   LUA_FLAGS="-I/usr/include/lua5.1/"
    AC_SUBST(LUA_FLAGS)
    
-   LUA_LIBS="-llua50 -llualib50 -lluabind"
+   LUA_LIBS="-llua5.1"
    AC_SUBST(LUA_LIBS)
    
    LUA_TAGS="-DLUAINTERFACE"
-   AC_SUBST( LUA_TAGS )
+   AC_SUBST(LUA_TAGS)
    
-   LUA_MAKEDIR=lua
-   AC_SUBST( LUA_MAKEDIR )
+   LUAMAKEDIR=lua
+   AC_SUBST(LUAMAKEDIR)
    
-   LUA_LOCAL_LIB='$(top_builddir)/source/lua/libluainterface.la'
-   AC_SUBST( LUA_LOCAL_LIB )
+   LUA_GAME_LIB='$(top_builddir)/source/lua/libluainterfacegame.la'
+   LUA_MAPED_LIB='$(top_builddir)/source/lua/libluainterfacemaped.la'
+   AC_SUBST(LUA_GAME_LIB)
+   AC_SUBST(LUA_MAPED_LIB)
 fi
 
 AC_CHECK_LIB(jpeg, 
