--- a/source/lua/Makefile.am
+++ b/source/lua/Makefile.am
@@ -2,9 +2,18 @@ MAINTAINERCLEANFILES	= Makefile.in
 
 AM_CXXFLAGS             = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ @LUA_FLAGS@
 
-noinst_LTLIBRARIES 	= libluainterface.la 
+noinst_LTLIBRARIES 	= libluainterfacegame.la libluainterfacemaped.la
 
-libluainterface_la_SOURCES	= luastate.cpp luarunner.cpp binder.cpp
-libluainterface_la_LIBADD		= @LUA_LIBS@
+libluainterfacegame_la_SOURCES	= commands.cpp commands_wrap.cxx luarunner.cpp luastate.cpp
+libluainterfacegame_la_LIBADD		= @LUA_LIBS@
+
+libluainterfacemaped_la_SOURCES	= mapedcommands.cpp mapedcommands_wrap.cxx luarunner.cpp luastate.cpp
+libluainterfacemaped_la_LIBADD		= @LUA_LIBS@
 
 EXTRA_DIST=$(srcdir)/*.h 
+
+.PHONY: SWIG
+
+SWIG:
+	swig -c++ -lua commands.i
+	swig -c++ -lua mapedcommands.i
