--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -45,7 +45,7 @@
 				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;../../../libs/sdlmm/src;../../../libs/getopt;&quot;$(libsigcpp)&quot;;../../../libs/paragui/include;&quot;../../../libs/loki-0.1.6/include&quot;;../../../libs/bzlib"
-				PreprocessorDefinitions="_WIN32_;WIN32;ASC_DEBUG;sgmain;FREEMAPZOOM;NEWKEYB;_SDL_;NOMINMAX;XVIDEXPORT"
+				PreprocessorDefinitions="_WIN32_;WIN32;ASC_DEBUG;sgmain;FREEMAPZOOM;NEWKEYB;_SDL_;NOMINMAX;XVIDEXPORT;LUAINTERFACE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				EnableFunctionLevelLinking="true"
@@ -71,7 +71,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/VERBOSE:LIB "
-				AdditionalDependencies="triangulate.lib libbzip2.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc-1.2.debug.lib paragui_static.lib physfs.lib freetype_D.lib libexpat.lib sdl_sound_d.lib libpng13d.lib libcurl_imp.lib revel.lib"
+				AdditionalDependencies="triangulate.lib libbzip2.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc-1.2.debug.lib paragui_static.lib physfs.lib freetype_D.lib libexpat.lib sdl_sound_d.lib libpng13d.lib libcurl_imp.lib revel.lib lua.lib"
 				ShowProgress="0"
 				OutputFile="$(OutDir)/bin/ASC2-debug.exe"
 				LinkIncremental="2"
@@ -141,7 +141,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;../../../libs/sdlmm/src;../../../libs/getopt;&quot;$(libsigcpp)&quot;;../../../libs/paragui/include;&quot;../../../libs/loki-0.1.6/include&quot;;../../../libs/bzlib"
-				PreprocessorDefinitions="WIN32;NDEBUG;sgmain;FREEMAPZOOM;_WIN32_;NEWKEYB;_SDL_;NOMINMAX;XVIDEXPORT"
+				PreprocessorDefinitions="WIN32;NDEBUG;sgmain;FREEMAPZOOM;_WIN32_;NEWKEYB;LUAINTERFACE;_SDL_;NOMINMAX;XVIDEXPORT"
 				RuntimeLibrary="2"
 				DefaultCharIsUnsigned="true"
 				ForceConformanceInForLoopScope="true"
@@ -163,7 +163,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="triangulate.lib libbzip2.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc-1.2.lib paragui_static.lib physfs.lib freetype.lib libexpat.lib sdl_sound.lib libpng13.lib libcurl_imp.lib revel.lib"
+				AdditionalDependencies="triangulate.lib libbzip2.lib SDLmm.lib SDL.lib SDL_image.lib SDL_mixer.lib SDLmain.lib sigc-1.2.lib paragui_static.lib physfs.lib freetype.lib libexpat.lib sdl_sound.lib libpng13.lib libcurl_imp.lib revel.lib lua.lib"
 				OutputFile="$(OutDir)/bin/ASC2.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(OutDir)/lib&quot;;&quot;../../../libs/SDLmm/SDLmm/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDLmain/$(ConfigurationName)&quot;;&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;../../../$(ConfigurationName)/lib&quot;;&quot;../../../libs/paragui/VisualC/$(ConfigurationName)&quot;;&quot;$(physfs)/$(ConfigurationName)&quot;;&quot;$(libpng)\projects\visualc71\Win32_DLL_$(ConfigurationName)&quot;"
@@ -1144,6 +1144,26 @@
 				>
 				<File
 					RelativePath="..\..\..\util\messaginghub.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="lua"
+				>
+				<File
+					RelativePath="..\..\..\lua\commands.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\lua\commands_wrap.cxx"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\lua\luarunner.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\lua\luastate.cpp"
 					>
 				</File>
 			</Filter>
