--- a/source/libs/revel/Makefile.in
+++ b/source/libs/revel/Makefile.in
@@ -130,6 +130,7 @@ LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LOKI_LIBS = @LOKI_LIBS@
 LTLIBOBJS = @LTLIBOBJS@
+LUA_CFLAGS = @LUA_CFLAGS@
 LUA_FLAGS = @LUA_FLAGS@
 LUA_LIBS = @LUA_LIBS@
 LUA_TAGS = @LUA_TAGS@
