--- a/source/widgets/Makefile.am
+++ b/source/widgets/Makefile.am
@@ -5,7 +5,8 @@ AM_CXXFLAGS             = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@
 
 noinst_LTLIBRARIES      = libwidgets.la 
 
-libwidgets_la_SOURCES   = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp playerselector.cpp targetcoordinatelocator.cpp textrenderer-addons.cpp 
+libwidgets_la_SOURCES   = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp playerselector.cpp \
+                          targetcoordinatelocator.cpp textrenderer-addons.cpp vehicletypeimage.cpp
 libwidgets_la_LIBADD    = @SDL_LIBS@
 
 INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
