--- a/source/widgets/Makefile.in
+++ b/source/widgets/Makefile.in
@@ -47,7 +47,7 @@ libwidgets_la_DEPENDENCIES =
 am_libwidgets_la_OBJECTS = textrenderer.lo bargraphwidget.lo \
 	dropdownselector.lo multilistbox.lo autoprogressbar.lo \
 	playerselector.lo targetcoordinatelocator.lo \
-	textrenderer-addons.lo
+	textrenderer-addons.lo vehicletypeimage.lo
 libwidgets_la_OBJECTS = $(am_libwidgets_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -234,7 +234,9 @@ zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@
 noinst_LTLIBRARIES = libwidgets.la 
-libwidgets_la_SOURCES = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp playerselector.cpp targetcoordinatelocator.cpp textrenderer-addons.cpp 
+libwidgets_la_SOURCES = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp playerselector.cpp \
+                          targetcoordinatelocator.cpp textrenderer-addons.cpp vehicletypeimage.cpp
+
 libwidgets_la_LIBADD = @SDL_LIBS@
 INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
 EXTRA_DIST = $(srcdir)/*.h
@@ -297,6 +299,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/targetcoordinatelocator.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textrenderer-addons.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textrenderer.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vehicletypeimage.Plo@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
