Fixed compilation problems

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -1167,6 +1167,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\lua\common.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\lua\luarunner.cpp"
 					>
 				</File>
