--- a/source/win32/msvc/pbpeditor/pbpeditor.vcproj
+++ b/source/win32/msvc/pbpeditor/pbpeditor.vcproj
@@ -827,6 +827,10 @@
 				Name="lua"
 				>
 				<File
+					RelativePath="..\..\..\lua\common.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\lua\luarunner.cpp"
 					>
 				</File>
