--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -810,6 +810,10 @@
 				Name="Lua"
 				>
 				<File
+					RelativePath="..\..\..\lua\common.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\lua\luarunner.cpp"
 					>
 				</File>
