--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -189,6 +189,7 @@ Section "Uninstall"
   Delete $INSTDIR\asc2_dlg.zip
   Delete $INSTDIR\README-SDL
   Delete $INSTDIR\Microsoft.VC90.CRT.manifest
+  Delete $INSTDIR\README-SDL.txt"
 
   Delete $DOCUMENTS\ASC\ASC2.cache
   Delete $DOCUMENTS\ASC\progress.dat
