--- a/source/unittests/Makefile.in
+++ b/source/unittests/Makefile.in
@@ -47,7 +47,7 @@ libunittests_la_DEPENDENCIES =
 am_libunittests_la_OBJECTS = movementtest.lo attacktest.lo \
 	unittestutil.lo main.lo ai-move1.lo viewtest.lo ai-service1.lo \
 	transfercontroltest.lo recyclingtest.lo diplomacytest.lo \
-	researchtest.lo objectconstructiontest.lo
+	researchtest.lo objectconstructiontest.lo actiontest.lo
 libunittests_la_OBJECTS = $(am_libunittests_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -235,7 +235,7 @@ MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ -I$(top_srcdir)/source -I$(top_srcdir)/source/libs/paragui/include
 noinst_LTLIBRARIES = libunittests.la
 libunittests_la_SOURCES = movementtest.cpp attacktest.cpp unittestutil.cpp main.cpp ai-move1.cpp viewtest.cpp ai-service1.cpp transfercontroltest.cpp \
-                          recyclingtest.cpp diplomacytest.cpp researchtest.cpp objectconstructiontest.cpp
+                          recyclingtest.cpp diplomacytest.cpp researchtest.cpp objectconstructiontest.cpp actiontest.cpp
 
 libunittests_la_LIBADD = @SDL_LIBS@
 EXTRA_DIST = $(srcdir)/*.h
@@ -290,6 +290,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/actiontest.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ai-move1.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ai-service1.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/attacktest.Plo@am__quote@
