More Lua functions  Mapeditor now has a Lua-Brush

--- a/source/lua/Makefile.am
+++ b/source/lua/Makefile.am
@@ -1,6 +1,6 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-AM_CXXFLAGS             = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ @LUA_FLAGS@
+AM_CXXFLAGS             = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ @LUA_FLAGS@ -I../libs/paragui/include
 
 noinst_LTLIBRARIES 	= libluainterfacegame.la libluainterfacemaped.la
 
