--- a/source/lua/Makefile.in
+++ b/source/lua/Makefile.in
@@ -237,7 +237,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
-AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ @LUA_FLAGS@ -I../libs/paragui/include
+AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ @LUA_FLAGS@ -I$(top_srcdir)/source/libs/paragui/include
 noinst_LTLIBRARIES = libluainterfacegame.la libluainterfacemaped.la
 libluainterfacegame_la_SOURCES = commands.cpp commands_wrap.cxx luarunner.cpp luastate.cpp common.cpp
 libluainterfacegame_la_LIBADD = @LUA_LIBS@
